MDEV-39087 os_file_set_size() may behave inconsistently during shutdown

os_file_set_size(): Ignore srv_shutdown_state and consistently extend
the file to completion. If someone is in a hurry, they can forcibly
kill the mariadbd process and test the crash recovery.